<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.articles.ArticleDetails">

    <data>
        <variable
            name="article"
            type="com.rosen.jambo.views.articles.Article" />

    </data>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedElements"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/article_details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/title"
                android:text="@{article.title}"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:typeface="serif"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/description"
                android:textSize="20sp"
                android:text="@{article.description}"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/content"
                android:text="@{article.content}"
                android:layout_marginTop="8dp"
                android:typeface="sans" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/author"
                android:text="@{article.author}"
                android:typeface="sans" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/htmlUrl"
                android:onClick="webViewDetails"
                android:text="@{article.url}"
                app:webLink="@{article.url}"
                android:gravity="center_vertical|center_horizontal"
                android:typeface="sans" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/publishedat"
                android:textStyle="bold"
                android:text="@{article.publishedAt}"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:typeface="sans" />

        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>

</layout>
