...
                android:fitsSystemWindows="true"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginBottom="20dp"
                app:expandedTitleMarginEnd="64dp">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:alpha="0.90"
                    app:imageUrl="@{article.urlToImage}"
                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
...
