...
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#E1E1E1"
                    />

                <RelativeLayout
                    android:id="@+id/rlPickLocation"
                    android:layout_below="@id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_centerInParent="true"
...
        </android.support.v7.widget.CardView>

        <Button
            android:enabled="false"
            android:layout_margin="@dimen/activity_horizontal_margin"
            style="@style/proceedButtonStyle"
            android:id="@+id/btnLocation"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/proceed" />

        <LinearLayout
            android:visibility="gone"
...
